<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".Activities.OrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_order"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/imv_product"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginRight="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/demo" />

                <TextView
                    android:id="@+id/tv_name_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@id/imv_product"
                    android:text="Product name"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name_product"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@id/imv_product"
                    android:text="Description"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_price_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_description"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@id/imv_product"
                    android:text="Price"
                    android:textColor="@color/colorRed"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_total_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_price_product"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@id/imv_product"
                    android:text="Total Pay"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/text_view_customer_info"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <!-- Input Customer Name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_order_activity_name"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- Input Customer Phone -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_order_activity_phone"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!-- Input Customer Email -->
                <!--
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_order_activity_email"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
                -->
                <!-- Input Customer Address -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_order_activity_address"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- Input Note -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_note"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_order_activity_notes"
                    app:boxBackgroundMode="outline"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- Button Confirm -->
                <Button
                    android:id="@+id/btn_order_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_button_order"
                    android:text="@string/btn_order_confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>